--- a/package.json
+++ b/package.json
@@ -49,20 +49,19 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.8.4",
-    "@types/jest": "^25.1.4",
-    "@types/react": "^16.9.25",
-    "@types/react-native": "^0.61.23",
-    "babel-jest": "^25.1.0",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^18.3.18",
+    "babel-jest": "^29.7.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "jest": "^25.1.0",
+    "jest": "^29.7.0",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
-    "jsdom": "^16.1.0",
-    "react": "16",
-    "react-dom": "^16.12.0",
-    "react-native": "^0.61.5",
-    "typescript": "^3.8.3"
+    "jsdom": "^25.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.76.5",
+    "typescript": "^5.7.2"
   },
   "dependencies": {
     "@react-native-clipboard/clipboard": "^1.14.1"
